veil-tests/src/compile_tests/fail/redact_partial_fixed.stderr
error: `#[redact(partial)]` and `#[redact(fixed = ...)]` are incompatible
 --> src/compile_tests/fail/redact_partial_fixed.rs:5:5
  |
5 |     #[redact(fixed = 3, partial)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `#[redact(partial)]` and `#[redact(fixed = ...)]` are incompatible
  --> src/compile_tests/fail/redact_partial_fixed.rs:11:5
   |
11 |     #[redact(variant, fixed = 3, partial)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
